kustomize/grocy/deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "2"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"barcodebuddy","namespace":"grocy"},"spec":{"replicas":1,"selector":{"matchLabels":{"name":"barcodebuddy"}},"template":{"metadata":{"labels":{"name":"barcodebuddy"}},"spec":{"containers":[{"image":"f0rc3/barcodebuddy:latest","imagePullPolicy":"Always","name":"barcodebuddy","ports":[{"containerPort":80}],"volumeMounts":[{"mountPath":"/config","name":"config"}]}],"volumes":[{"name":"config","persistentVolumeCla [...]
    creationTimestamp: "2023-12-28T13:13:25Z"
    generation: 2
    name: barcodebuddy
    namespace: grocy
    resourceVersion: "20145058"
    uid: 36bb5081-c00c-4e11-9447-121fd8a3160f
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        name: barcodebuddy
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          name: barcodebuddy
      spec:
        containers:
        - image: f0rc3/barcodebuddy:latest
          imagePullPolicy: Always
          name: barcodebuddy
          ports:
          - containerPort: 80
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /config
            name: config
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: config
          persistentVolumeClaim:
            claimName: barcodebuddy
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2023-12-28T13:13:25Z"
      lastUpdateTime: "2023-12-28T13:20:52Z"
      message: ReplicaSet "barcodebuddy-7969964b" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2024-12-15T01:11:51Z"
      lastUpdateTime: "2024-12-15T01:11:51Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "3"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"grocy","namespace":"grocy"},"spec":{"replicas":1,"selector":{"matchLabels":{"name":"grocy"}},"template":{"metadata":{"labels":{"name":"grocy"}},"spec":{"containers":[{"env":[{"name":"PUID","value":"1000"},{"name":"PGID","value":"1000"},{"name":"TZ","value":"Europe/Berlin"}],"image":"linuxserver/grocy:latest","imagePullPolicy":"Always","name":"grocy","ports":[{"containerPort":9283}],"volumeMounts":[{"mountPat [...]
    creationTimestamp: "2023-12-28T11:52:02Z"
    generation: 3
    name: grocy
    namespace: grocy
    resourceVersion: "20145124"
    uid: a9443b5c-25f0-4644-a255-004a8af5d444
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        name: grocy
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          name: grocy
      spec:
        containers:
        - env:
          - name: PUID
            value: "1000"
          - name: PGID
            value: "1000"
          - name: TZ
            value: Europe/Berlin
          image: linuxserver/grocy:latest
          imagePullPolicy: Always
          name: grocy
          ports:
          - containerPort: 9283
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/www/data
            name: db
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: db
          persistentVolumeClaim:
            claimName: grocy
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2023-12-28T11:52:02Z"
      lastUpdateTime: "2023-12-29T16:49:10Z"
      message: ReplicaSet "grocy-669bb6444d" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2024-12-15T01:11:52Z"
      lastUpdateTime: "2024-12-15T01:11:52Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 3
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
