kustomize/grocy/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod"},"name":"grocy","namespace":"grocy"},"spec":{"ingressClassName":"traefik","rules":[{"host":"grocy.stillon.top","http":{"paths":[{"backend":{"service":{"name":"grocy","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["grocy.stillon.top"],"secretName":"grocy.stillon.top-tls"}]}}
    creationTimestamp: "2023-12-28T11:55:24Z"
    generation: 2
    name: grocy
    namespace: grocy
    resourceVersion: "6001990"
    uid: 61fdfd59-8213-4fb4-bf7c-ed7cedf67a28
  spec:
    ingressClassName: traefik
    rules:
    - host: grocy.stillon.top
      http:
        paths:
        - backend:
            service:
              name: grocy
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - grocy.stillon.top
      secretName: grocy.stillon.top-tls
  status:
    loadBalancer:
      ingress:
      - ip: 161.97.88.129
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod"},"name":"barcodebuddy","namespace":"grocy"},"spec":{"ingressClassName":"traefik","rules":[{"host":"barcodebuddy.stillon.top","http":{"paths":[{"backend":{"service":{"name":"barcodebuddy","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["barcodebuddy.stillon.top"],"secretName":"barcodebuddy.stillon.top-tls"}]}}
    creationTimestamp: "2023-12-28T12:36:12Z"
    generation: 2
    name: barcodebuddy
    namespace: grocy
    resourceVersion: "6002034"
    uid: edac46d9-1414-4995-bc11-72f60a5be759
  spec:
    ingressClassName: traefik
    rules:
    - host: barcodebuddy.stillon.top
      http:
        paths:
        - backend:
            service:
              name: barcodebuddy
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - barcodebuddy.stillon.top
      secretName: barcodebuddy.stillon.top-tls
  status:
    loadBalancer:
      ingress:
      - ip: 161.97.88.129
kind: List
metadata:
  resourceVersion: ""
